[package]
name = "dxf2elmt"
version = "0.4.0"
edition = "2021"
description = "A CLI program to convert .dxf files into .elmt files"
authors = ["Vadoola <github: vadoola>", "Antonio Aguilar <github: antonioaja>"]
readme = "README.md"
repository = "https://github.com/Vadoola/dxf2elmt"
license = "MIT"
rust-version = "1.74.1"

[profile.release]
strip = true
lto = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
dxf = "0.6.0"
simple-xml-builder = "1.1.0"
bspline = "1.1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
tempfile = "3.15"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.95"
wild = "2.2"
rayon = "1.10.0"
hex_color = "3.0.0"
itertools = "0.14"
parley = "0.2.0"

#[lints.clippy]
#unwrap_used = "deny"